--- a/app/src/main/res/layout/app_bar_sales.xml
+++ b/app/src/main/res/layout/app_bar_sales.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Sales"
+    tools:context=".activities.SalesActivity"
     tools:ignore="MissingTranslation">
 
     <android.support.design.widget.AppBarLayout
