--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,19 +6,38 @@
     android:layout_height="match_parent"
     android:background="@drawable/astavka"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
+    tools:context=".activities.MainActivity"
     tools:ignore="MissingTranslation"
     tools:showIn="@layout/app_bar_main">
+
+    <Button
+        android:id="@+id/btn_set_assortment_barcode"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/item_selector_button_side_theme"
+        android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="10dp"
+        android:text="@string/btn_atribuire_barcodului"
+        android:textAllCaps="false"
+        android:textColor="@android:color/background_light"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_stock_assortment" />
 
     <Button
         android:id="@+id/btn_transfer"
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@drawable/item_selector_button_side_theme"
         android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
         android:gravity="start|center_vertical"
@@ -39,10 +58,8 @@
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@drawable/item_selector_button_side_theme"
         android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
         android:gravity="start|center_vertical"
@@ -51,7 +68,7 @@
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView6"
+        app:layout_constraintBottom_toTopOf="@+id/btn_set_assortment_barcode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,10 +79,8 @@
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@drawable/item_selector_button_side_theme"
         android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
         android:gravity="start|center_vertical"
@@ -84,12 +99,10 @@
     <Button
         android:id="@+id/btn_sales"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@drawable/item_selector_button_side_theme"
         android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
         android:gravity="start|center_vertical"
@@ -108,12 +121,10 @@
     <Button
         android:id="@+id/btn_invoice"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@drawable/item_selector_button_side_theme"
         android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
         android:gravity="start|center_vertical"
@@ -132,12 +143,10 @@
     <Button
         android:id="@+id/btn_check_price"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@drawable/item_selector_button_side_theme"
         android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
         android:gravity="start|center_vertical"
@@ -159,14 +168,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_stock_assortment"
+        app:layout_constraintTop_toBottomOf="@+id/btn_set_assortment_barcode"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/logo_is" />
 </android.support.constraint.ConstraintLayout>
