--- a/app/src/main/res/layout/content_transfer.xml
+++ b/app/src/main/res/layout/content_transfer.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/astavka"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Sales"
+    tools:context=".activities.SalesActivity"
     tools:ignore="MissingTranslation"
     tools:showIn="@layout/app_bar_transfer">
 
