--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,12 @@
     <color name="new_text_color">#84CCF7</color>
     <color name="back_gray">#727272</color>
     <color name="color_white_new">#FFFFFF</color>
+
+    <color name="basic_item_bg">@android:color/white</color>
+    <color name="orange_color">#ef6c00</color>
+    <color name="primary">#272a3b</color>
+    <color name="stroke_gray_color">#dddddd</color>
+    <color name="hint_text_color">#7f7f7f</color>
 </resources>
 <!--004c63-->
     <!--004263-->
