В продажах добавлена возможность длбавить коменарий к заказу

--- a/app/src/main/res/layout/activity_count_sales.xml
+++ b/app/src/main/res/layout/activity_count_sales.xml
@@ -167,17 +167,27 @@
             android:id="@+id/txtPrice_asortment_count_sales"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:gravity="end"
             android:text="0"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txt_unit"
             app:layout_constraintStart_toEndOf="@+id/textView12"
             app:layout_constraintTop_toBottomOf="@+id/textView10"
             app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/txt_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:textColor="@color/background_fon"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txtPrice_asortment_count_sales"
+            app:layout_constraintTop_toBottomOf="@+id/txtStoc_asortment_count_sales" />
     </android.support.constraint.ConstraintLayout>
 
     <TextView
