--- a/app/src/main/res/layout/activity_set_assortment_barcode.xml
+++ b/app/src/main/res/layout/activity_set_assortment_barcode.xml
@@ -123,14 +123,24 @@
             android:id="@+id/txtPrice_asortment_set_barcode"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
             android:gravity="end"
             android:text="0"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txt_unit_barcode"
             app:layout_constraintStart_toEndOf="@+id/textView12" />
+
+        <TextView
+            android:id="@+id/txt_unit_barcode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtMarking_asortment_set_barcode" />
     </android.support.constraint.ConstraintLayout>
 
     <EditText
