--- a/app/src/main/res/layout/activity_count_list_of_assortment.xml
+++ b/app/src/main/res/layout/activity_count_list_of_assortment.xml
@@ -190,7 +190,7 @@
 
         <TextView
             android:id="@+id/txtcode_assortment_count_list_asl"
-            android:layout_width="177dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:gravity="end"
@@ -280,15 +280,25 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:gravity="end"
             android:text="0"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txt_unit_list_assortment"
             app:layout_constraintStart_toEndOf="@+id/textView12"
+            app:layout_constraintTop_toBottomOf="@+id/txtStoc_asortment_count_list_asl" />
+
+        <TextView
+            android:id="@+id/txt_unit_list_assortment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtStoc_asortment_count_list_asl" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
