--- a/app/src/main/res/layout/content_check_price.xml
+++ b/app/src/main/res/layout/content_check_price.xml
@@ -240,13 +240,22 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
             android:gravity="end"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txt_unit_check_price"
             app:layout_constraintStart_toEndOf="@+id/textView12"
+            app:layout_constraintTop_toBottomOf="@+id/txtBarcode_assortment_checkPrice" />
+
+        <TextView
+            android:id="@+id/txt_unit_check_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtBarcode_assortment_checkPrice" />
     </android.support.constraint.ConstraintLayout>
 
