--- a/app/src/main/res/layout/list_assortiment_view.xml
+++ b/app/src/main/res/layout/list_assortiment_view.xml
@@ -24,9 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textSize="18sp"
@@ -37,14 +35,12 @@
 
     <TextView
         android:id="@+id/txt_price_asl_list"
-        android:layout_width="110dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:gravity="start"
+        android:gravity="center"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/txt_unit"
         app:layout_constraintStart_toEndOf="@+id/txt_barcode_asl_list"
         app:layout_constraintTop_toBottomOf="@+id/text_view_asl" />
 
@@ -59,6 +55,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/txt_price_asl_list"
         app:layout_constraintStart_toEndOf="@+id/image_view_asl_xm"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_asl" />
+
+    <TextView
+        android:id="@+id/txt_unit"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txt_price_asl_list"
         app:layout_constraintTop_toBottomOf="@+id/text_view_asl" />
 
 </android.support.constraint.ConstraintLayout>
