--- a/app/src/main/res/layout/content_workplace.xml
+++ b/app/src/main/res/layout/content_workplace.xml
@@ -128,7 +128,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="@string/txt_grupe_pentru_vizualizare_workplace"
         android:textColor="@android:color/black"
@@ -136,7 +136,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch_print_sales" />
+        app:layout_constraintTop_toBottomOf="@+id/switch_check_stock_add_asl" />
 
     <Button
         android:id="@+id/btn_add_folder_workplace"
@@ -196,5 +196,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switch_show_keyboard_workplace" />
+
+    <Switch
+        android:id="@+id/switch_check_stock_add_asl"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Verfica stocul la adaugarea cantitatii"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switch_print_sales" />
 
 </android.support.constraint.ConstraintLayout>
