--- a/app/src/main/res/layout/activity_count_list_of_assortment.xml
+++ b/app/src/main/res/layout/activity_count_list_of_assortment.xml
@@ -300,5 +300,19 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtStoc_asortment_count_list_asl" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
+            android:indeterminate="true"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/txtPrice_asortment_count_list_asl"
+            app:layout_constraintEnd_toEndOf="@+id/txtStoc_asortment_count_list_asl"
+            app:layout_constraintTop_toBottomOf="@+id/txtBarcode_assortment_count_list_asl" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
