--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -53,7 +53,7 @@
                 android:gravity="start|center_vertical"
                 android:paddingLeft="10dp"
                 android:singleLine="true"
-                android:text="Creare asortiment"
+                android:text="Создание товара"
                 android:textAllCaps="false"
                 android:textColor="@android:color/background_light"
                 android:textSize="22sp"
@@ -204,18 +204,19 @@
             <ImageView
                 android:id="@+id/imageView6"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:scaleType="centerInside"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_create_assortment"
                 app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@drawable/logo_is" />
+                app:srcCompat="@drawable/is_log" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 </ScrollView>
