--- a/app/src/main/res/layout/activity_search_provider.xml
+++ b/app/src/main/res/layout/activity_search_provider.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/astavka"
     tools:context=".SearchProvider">
     <include
         layout="@layout/app_bar_search"
