--- a/app/src/main/res/layout/app_bar_search.xml
+++ b/app/src/main/res/layout/app_bar_search.xml
@@ -23,9 +23,11 @@
                 android:id="@+id/searchEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="5dp"
                 android:hint="@string/hint_search_provider"
-               android:layout_marginHorizontal="30dp"
+                android:layout_marginHorizontal="30dp"
                 android:textColor="#000000"
+                android:background="@drawable/search_text_fild_style"
                 android:layout_gravity="center" />
         </androidx.appcompat.widget.Toolbar>
 
