--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -2,6 +2,7 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/search_list"
     android:layout_width="match_parent"
+    android:background="@drawable/astavka"
     android:layout_height="match_parent">
 
 
