--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -53,7 +53,7 @@
                 android:gravity="start|center_vertical"
                 android:paddingLeft="10dp"
                 android:singleLine="true"
-                android:text="Создание товара"
+                android:text="@string/btn_adauga_produs"
                 android:textAllCaps="false"
                 android:textColor="@android:color/background_light"
                 android:textSize="22sp"
